@@ -1,5 +1,5 @@
 AC_PREREQ(2.61)
-AC_INIT(fpac, 3.27.15, f6bvp@free.fr)
+AC_INIT(fpac, 3.27.16, f6bvp@free.fr)
 AM_INIT_AUTOMAKE([-Wall -Werror dist-bzip2])
 
 AC_CONFIG_HEADERS([config.h])
@@ -58,5 +58,5 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(alarm dup2 gethostbyaddr gethostname gettimeofday inet_ntoa memchr memove memset mkdir munmap putenv select setenv socket sqrt strcasecmp strchar strcspn strdup strerror strncasecmp strpbrk strrchr strspn strstr strtol strtoul uname)
 
 
-AC_CONFIG_FILES([Makefile lib/Makefile cfg/Makefile monitor/Makefile node/Makefile flex/Makefile pad/Makefile tcp/Makefile wp/Makefile kiss/Makefile tools/Makefile stats/Makefile doc/Makefile doc/html/Makefile help/Makefile scripts/versions:scripts/versions.in scripts/fpac.sh:scripts/fpac.in scripts/Makefile etc/aprslist.conf.fr:etc/aprslist.conf.fr.in etc/aprslist.conf:etc/aprslist.conf.in etc/flexd.conf:etc/flexd.conf.in etc/flexd.routes:etc/flexd.routes.in etc/fpac.conf:etc/fpac.conf.in etc/fpac.nodes:etc/fpac.nodes.in etc/fpac.routes:etc/fpac.routes.in etc/Makefile])
+AC_CONFIG_FILES([Makefile lib/Makefile cfg/Makefile monitor/Makefile node/Makefile flex/Makefile pad/Makefile tcp/Makefile wp/Makefile kiss/Makefile tools/Makefile stats/Makefile doc/Makefile doc/html/Makefile help/Makefile scripts/versions:scripts/versions.in scripts/fpac.sh:scripts/fpac.in scripts/Makefile etc/Makefile])
 AC_OUTPUT
